--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "archi",
   "version": "0.1.0",
+  "homepage": "https://Wenxiaoxiao.github.io/archi",
   "private": true,
   "dependencies": {
     "@babel/core": "7.2.2",
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "7.12.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -56,7 +58,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
