--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "archi",
   "version": "0.1.0",
-  "homepage": "https://Wenxiaoxiao.github.io",
+  "homepage": "https://Wenxiaoxiao.github.io/archi",
   "private": true,
   "dependencies": {
     "@babel/core": "7.2.2",
